--- a/Areas/HumanResource/Views/Employees/Allowance.cshtml
+++ b/Areas/HumanResource/Views/Employees/Allowance.cshtml
@@ -9,6 +9,7 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a href="/Humanresource/Employees/SetupAllowance?employeeid=@ViewBag.employeeid&categoryid=@ViewBag.categoryid">Generate Allowance</a>
 </p>
 <table class="table">
     <thead>
