--- a/Areas/HumanResource/Views/StandardDeductionCalculations/Create.cshtml
+++ b/Areas/HumanResource/Views/StandardDeductionCalculations/Create.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>StandardDeductionCalculation</h4>
+<h5>Add Standard Deduction Calculation</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
