--- a/Areas/HumanResource/Views/Allowances/Index.cshtml
+++ b/Areas/HumanResource/Views/Allowances/Index.cshtml
@@ -15,9 +15,9 @@
     </div>
 </div>
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
     <thead>
-        <tr>
+        <tr class="table-success">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -67,7 +67,7 @@
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ID">Delete</a> |
-                    <a href="/humanresource/slabcategories/create?id=@item.ID" >Assign To</a>
+                    <a href="/humanresource/slabcategories/create?id=@item.ID">Assign To</a>
             </td>
         </tr>
 }
