--- a/Areas/HumanResource/Views/AttendanceHeads/Create.cshtml
+++ b/Areas/HumanResource/Views/AttendanceHeads/Create.cshtml
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<h4>Attendance Head</h4>
+<h5>Attendance Head</h5>
 <hr />
 <form asp-action="Create">
 <div class="standard-row-container">
@@ -84,7 +84,7 @@
                     </div>
                     <div class="form-group form-check">
                         <label class="form-check-label">
-                            <input class="form-check-input" asp-for="IsHoliday" /> Holiday
+                            <input class="form-check-input" asp-for="IsHoliday" /> Weekly Off
                         </label>
                     </div>
                     <div class="form-group form-check">
