--- a/Areas/HumanResource/Views/Deductions/Index.cshtml
+++ b/Areas/HumanResource/Views/Deductions/Index.cshtml
@@ -57,7 +57,7 @@
                 @Html.DisplayFor(modelItem => item.OnYearlyIncome)
             </td>
                 <td>
-                    @if (item.Fixed)
+                    @if (item.Fixed != null)
                     {
                         <span>Fixed</span>
                     }
@@ -80,7 +80,10 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a> |
+                    @if (item?.InActive == false)  {
+                        <a href="/humanresource/slabcategories/create?id=0&deductionid=@item.ID">Assign To</a>
+                    }
             </td>
         </tr>
 }
