--- a/Areas/HumanResource/Views/Holidays/Index.cshtml
+++ b/Areas/HumanResource/Views/Holidays/Index.cshtml
@@ -15,9 +15,9 @@
     </div>
 </div>
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
     <thead>
-        <tr>
+        <tr class="table-success">
             <th>
                 @Html.DisplayNameFor(model => model.sDate)
             </th>
