--- a/Areas/HumanResource/Views/LeaveApplications/Index.cshtml
+++ b/Areas/HumanResource/Views/LeaveApplications/Index.cshtml
@@ -15,9 +15,9 @@
     </div>
 </div>
 
-<table class="table">
+<table class="table table-bordered table-striped">
     <thead>
-        <tr>
+        <tr class="table-success ">
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
