--- a/Areas/HumanResource/Views/LoanRequests/Index.cshtml
+++ b/Areas/HumanResource/Views/LoanRequests/Index.cshtml
@@ -10,9 +10,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped table-bordered ">
     <thead>
-        <tr>
+        <tr class="table-success ">
             <th>
                 @Html.DisplayNameFor(model => model.RequestNo)
             </th>
