--- a/Areas/HumanResource/Views/Positions/Index.cshtml
+++ b/Areas/HumanResource/Views/Positions/Index.cshtml
@@ -14,9 +14,9 @@
         <a asp-action="Create">Add New Position</a>
     </div>
 </div>
-<table class="table table-striped">
+<table class="table table-striped table-bordered ">
     <thead>
-        <tr>
+        <tr class="table-success">
             <th>
                 @Html.DisplayNameFor(model => model.PositionName)
             </th>
